--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.1'
 volumes:
         postgres-data:
+        current-channel:
 services:
         db:
           image: postgres:alpine
@@ -16,6 +17,7 @@ services:
           restart: always
           volumes:
             - ./config.json:/config.json
+            - current-channel:/current_channel.txt
           links:
             - db
           environment:
