--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,9 +17,8 @@ run:
   # default value is empty list, but next dirs are always skipped independently
   # from this option's value:
   #   	vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
-  skip-dirs:
-    - extras
-    - x
+  #  skip-dirs:
+
   #  - src/external_libs
 
   # which files to skip: they will be analyzed, but issues from them
@@ -41,9 +40,8 @@ run:
   # the dependency descriptions in go.mod.
   # modules-download-mode: vendor
 
-  build-tags:
-    - sse_full
-    - prod
+  #build-tags:
+
 
 # output configuration options
 output:
@@ -161,7 +159,6 @@ linters-settings:
     # By default list of stable checks is used.
     enabled-checks:
       - rangeValCopy
-      - captlocal
 
   wsl:
     # If true append is only allowed to be cuddled if appending value is
@@ -206,7 +203,6 @@ linters:
     - gci
     - gofumpt
     - dupl
-    - godox
     - gomnd
     - godot
     - exhaustivestruct
